--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjetoX</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +32,6 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ">
-                <img src="img/logo" alt="" class="logo">
                 <a class="navbar-brand" href="#">ProjetoX</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,25 +65,29 @@
         </nav>
     </header>
     <main>
-        <div class="main_box">
-            <h2>Criar novo usuario</h2>
-            <div class="small_box">                
-                <span>Nome</span>
-                <input type="text" class="input_text">
+        <div class=" container-fluid main_box">
+            <div class="general_box">
+                <h2>Criar novo usuario</h2>
+                <div class="container-fluid small_box">
+                    <span>Nome</span>
+                    <input type="text" class="input_text">
+                </div>
+                <div class="container-fluid small_box">
+                    <span>Senha</span>
+                    <input type="text" class="input_text">
+                </div>
+                <div class="container-fluid small_box">
+                    <span>Confirmar senha</span>
+                    <input type="text" class="input_text">
+                </div>
+                <div class="container-fluid small_box">
+                    <span>Email</span>
+                    <input type="text" class="input_text">
+                </div>
+                <button type="button" class="btn"><b>Criar</b></button>
+
             </div>
-            <div class="small_box">                
-                <span>Senha</span>
-                <input type="text" class="input_text">
-            </div>
-            <div class="small_box">                
-                <span>Confirmar senha</span>
-                <input type="text" class="input_text">
-            </div>
-            <div class="small_box">                
-                <span>Email</span>
-                <input type="text" class="input_text">
-            </div>
-            <button type="button" class="btn">Base class</button>
+
 
         </div>
 
