--- a/src/views/page.html
+++ b/src/views/page.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../../public/css/page_css/page_header.css">
     <link rel="stylesheet" href="../../public/css/page_css/page_main.css">
@@ -25,51 +26,53 @@
 </head>
 
 <body>
-    <main>
-        <div class="tools_bar">
-            <div class="tools_list">
-                <input value="tool1" type="button" class="tool_option">
-                <input value="tool2" type="button" class="tool_option">
-                <input value="tool3" type="button" class="tool_option">
-                <input value="tool4" type="button" class="tool_option">
-                <input value="tool5" type="button" class="tool_option">
-            </div>
-
-            <div class="home_space">
-                <input value="Voltar" type="button" class="home_button">
+  <header>
+      <a class="navbar-brand" href="#">ProjetoX</a>
+      <div class="wrapper">
+        <div class="option">
+          <input checked="" value="option1" name="btn" type="radio" class="input" />
+          <div class="btn">
+            <span class="span">Pag1</span>
+          </div>
+        </div>
+        <div class="option">
+          <input value="option2" name="btn" type="radio" class="input" />
+          <div class="btn">
+            <span class="span">Pag2</span>
+          </div>
+        </div>
+        <div class="option">
+          <input value="option3" name="btn" type="radio" class="input" />
+          <div class="btn">
+            <span class="span">Pag3</span>
+          </div>
+        </div>
+        <div class="option">
+            <input value="option4" name="btn" type="radio" class="input" />
+            <div class="btn">
+              <span class="span">. . .</span>
             </div>
         </div>
+      </div>
+  </header>
+  <main>
+      <div class="tools_bar">
+          <div class="tools_list">
+              <input value="tool1" type="button" class="tool_option">
+              <input value="tool2" type="button" class="tool_option">
+              <input value="tool3" type="button" class="tool_option">
+              <input value="tool4" type="button" class="tool_option">
+              <input value="tool5" type="button" class="tool_option">
+          </div>
 
-        <div class="wrapper">
-            <div class="option">
-              <input checked="" value="option1" name="btn" type="radio" class="input" />
-              <div class="btn">
-                <span class="span">Pag1</span>
-              </div>
-            </div>
-            <div class="option">
-              <input value="option2" name="btn" type="radio" class="input" />
-              <div class="btn">
-                <span class="span">Pag2</span>
-              </div>
-            </div>
-            <div class="option">
-              <input value="option3" name="btn" type="radio" class="input" />
-              <div class="btn">
-                <span class="span">Pag3</span>
-              </div>
-            </div>
-            <div class="option">
-                <input value="option4" name="btn" type="radio" class="input" />
-                <div class="btn">
-                  <span class="span">. . .</span>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer>
+          <div class="home_space">
+              <input value="Home" type="button" class="home_button">
+          </div>
+      </div>
+  </main>
+  <footer>
 
-    </footer>
+  </footer>
 
 </body>
 
