Desenvolvendo o front das paginas de login e sign in

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -18,12 +18,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/sign_in/index_header.css">
-    <link rel="stylesheet" href="css/sign_in/index_main.css">
-    <link rel="stylesheet" href="css/sign_in/index_footer.css">
-    <link rel="stylesheet" href="css/details_css/day_night.css">
+    <link rel="stylesheet" href="../../public/css/log_in.css/login_header.css">
+    <link rel="stylesheet" href="../../public/css/log_in.css/login_main.css">
+    <link rel="stylesheet" href="../../public/css/details_css/day_night.css">
 
-    <script defer src="js/script.js"></script>
+    <script defer src="../../public/js/script.js"></script>
 
     <script></script>
 
@@ -86,18 +85,16 @@
             
             <div class="general_box">
                 <div class="text">
-                    <h2>Welcome</h2>
+                    <h2>Welcome back</h2>
                     <h2 class="buddy">Buddy!</h2>
                 </div>
                 <div>
-                    <h2>Tell us more about you!<h2>
+                    <h2>We just need to check your IDs!<h2>
                     </div>
 
                     <div class="container-fluid small_box">
 
-                        <input type="text" class="input_text" placeholder="Name">
-                    </div>
-                    <div class="container-fluid small_box">
+                        
 
                         <input type="text" class="input_text" placeholder="Email">
                     </div>
@@ -105,13 +102,11 @@
 
                         <input type="text" class="input_text" placeholder="Password">
                     </div>
-                    <div class="container-fluid small_box">
-
-                        <input type="text" class="input_text" placeholder="Confirm Password">
-                    </div>
-                    <button type="button" class="btn"><b>Create</b></button>
-
+                    
+                    <button type="button" class="btn"><b>Login</b></button>   
+                    <p>Dont had an account ? <a href="">click here</a></p>                
             </div>
+            
 
 
         </div>
