--- a/public/css/sign_in/index_main.css
+++ b/public/css/sign_in/index_main.css
@@ -1,14 +1,15 @@
+
 .main_box {
-    background-color: #02040F;
+    background-color: var(--bg_color);
     display: flex;
-    color: #FAFAFA;
+    color: var(--input_color);
     justify-content: center;
     padding: 30px;
     flex-direction: column;
-    align-items: center;
-    height: 94vh;    
+    align-items: center;    
     gap: 15px;
     position: relative;
+    height: 100%;
    
 
 
@@ -22,9 +23,9 @@
     align-items: center;
     position: absolute;
     min-width: 390px;
-    gap: 15px;
-    box-shadow: 4px 4px #ffd23f;
-    border: 2px #ffd23f solid;
+    gap: 50px;
+    box-shadow: 4px 4px var(--main_color);
+    border: 2px var(--main_color) solid;
     padding: 30px;
     border-radius: 30px;
 }
@@ -40,11 +41,11 @@
 
 .input_text {
     border-radius: 3px;   
-    background-color: #12141b;
+    background-color: var(--input_bg_color);
     height: 40px;
     border-radius: 20px;
-    color: #FAFAFA;
-    border: 2px #131212 solid;
+    color: var(--input_color);
+    border: 2px var(--grey_border) solid;
     padding-left: 15px;
     
     
@@ -52,21 +53,33 @@
 
 
 .input_text:focus {
-    border-color: #ffd23f; /* Nova cor da borda quando selecionado */
+    border-color: var(--main_color); /* Nova cor da borda quando selecionado */
     outline: none; /* Removendo a borda padrão do navegador */
     /* Adicione mais propriedades de estilo conforme necessário */
 }
 
 .btn {
-    color:#FAFAFA;
-    background-color: #12141b;
+    color:var(--input_color);
+    background-color: var(--bg_color);
     border-radius: 10px;
-    border: 2px #292929 solid;
+    border: 2px var(--main_color) solid;
     width: 100px;
     
 }
 
 .btn:hover{
-    background-color: #fac71e;
-    color: #02040F;
+    background-color: var(--main_color);    
+}
+.text{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.buddy{
+    color: var(--main_color);
+}
+
+.title_text{
+    font-size: 30px;
 }
