--- a/src/views/pred_creator.html
+++ b/src/views/pred_creator.html
@@ -32,18 +32,46 @@
     </header>
     <main>
         <div class="pred_form">
-            <div class="checkbox-wrapper">
-                <input id="terms-checkbox-37" name="checkbox" type="checkbox">
-                <label class="terms-label" for="terms-checkbox-37">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 200 200" class="checkbox-svg">
-                    <mask fill="white" id="path-1-inside-1_476_5-37">
-                      <rect height="200" width="200"></rect>
-                    </mask>
-                    <rect mask="url(#path-1-inside-1_476_5-37)" stroke-width="40" class="checkbox-box" height="200" width="200"></rect>
-                    <path stroke-width="15" d="M52 111.018L76.9867 136L149 64" class="checkbox-tick"></path>
-                  </svg>
-                  <span class="label-text">Checkbox</span>
-                </label>
+            <label for="pred_form" class="title">Create a Pré-definition</label>
+            <div class="pred_name">
+
+            </div>
+            <div class="tools_box">
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item1" name="item1">
+                    <label for="item1" class="check_box"></label>
+                    <label for="item1" class="checkbox_label">Tool 1</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item2" name="item2">
+                    <label for="item2" class="check_box"></label>
+                    <label for="item2" class="checkbox_label">Tool 2</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item3" name="item3">
+                    <label for="item3" class="check_box"></label>
+                    <label for="item3" class="checkbox_label">Tool 3</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item4" name="item4">
+                    <label for="item4" class="check_box"></label>
+                    <label for="item4" class="checkbox_label">Tool 4</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item5" name="item5">
+                    <label for="item5" class="check_box"></label>
+                    <label for="item5" class="checkbox_label">Tool 5</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item6" name="item6">
+                    <label for="item6" class="check_box"></label>
+                    <label for="item6" class="checkbox_label">Tool 6</label>
+                </div>
+                <div class="option_checkbox">
+                    <input type="checkbox" id="item7" name="item7">
+                    <label for="item7" class="check_box"></label>
+                    <label for="item7" class="checkbox_label">Tool 7</label>
+                </div>
             </div>
         </div>
     </main>
