--- a/public/css/pred_creator_css/pred_creator_main.css
+++ b/public/css/pred_creator_css/pred_creator_main.css
@@ -2,5 +2,46 @@ body {
     background-color: #02040F;
 }
 
+.title {
+    font-size: 25px;
+    color: #fafafa;
+}
+
 .pred_form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 600px;
+    width: 500px;
+    border: 5px solid #6C3287;
+    border-radius: 30px;
+    box-shadow: 4px 4px #6C3287;
+    padding: 50px;
+}
+
+.tools_box {
+    height: 300px;
+    width: 400px;
+    border: 2px solid #6C3287;
+    overflow: auto;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    border-radius: 20px;
+    scrollbar-width: thin;
+}
+
+.scroll-box::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f5f5f5;
+}
+
+.scroll-box::-webkit-scrollbar-thumb {
+    background-color: #6C3287;
+    border-radius: 4px;
+}
+
+.scroll-box::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
 }
