--- a/public/css/pred_creator_css/pred_creator_main.css
+++ b/public/css/pred_creator_css/pred_creator_main.css
@@ -1,22 +1,28 @@
 body {
-    background-color: #02040F;
+    background-color: var(--bg_color);
+}
+
+.main_container {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 .title {
     font-size: 25px;
-    color: #fafafa;
+    color: var(--input_color);
 }
 
 .pred_form {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     height: 600px;
     width: 500px;
-    border: 5px solid #6C3287;
+    border: 5px solid var(--main_color);
     border-radius: 30px;
-    box-shadow: 4px 4px #6C3287;
+    box-shadow: 4px 4px var(--main_color);
     padding: 50px;
+    gap: 20px;
 }
 
 .tools_box {
@@ -34,14 +40,43 @@ body {
 
 .scroll-box::-webkit-scrollbar {
     width: 8px;
-    background-color: #f5f5f5;
+    background-color: var(--bg_color);
 }
 
 .scroll-box::-webkit-scrollbar-thumb {
-    background-color: #6C3287;
+    background-color:  var(--bg_color);
     border-radius: 4px;
 }
 
 .scroll-box::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
+    background-color:  var(--bg_color);
+}
+
+.input_text {
+    border-radius: 3px;   
+    background-color: var(--bg_color);
+    height: 40px;
+    border-radius: 20px;
+    color: var(--input_color);
+    border: 2px #6C3287 solid;
+    padding-left: 15px;
+    width: 400px;
+}
+
+.input_text:focus {
+    border-color: #6C3287;
+    outline: none;
+}
+
+.btn {
+    color: var(--input_color);
+    border-radius: 10px;
+    border: 2px #6C3287 solid;
+    width: 20px;
+    height: 40px;
+}
+
+.btn:hover{
+    background-color: #6C3287;
+    color: #fafafa;
 }
