--- a/src/views/pred_creator.html
+++ b/src/views/pred_creator.html
@@ -19,8 +19,9 @@
     <link rel="stylesheet" href="../../public/css/details_css/option_bar.css">
     <link rel="stylesheet" href="../../public/css/details_css/page_card.css">
     <link rel="stylesheet" href="../../public/css/details_css/check_box.css">
+    <link rel="stylesheet" href="../../public/css/details_css/day_night.css">
 
-    <script src="js/script.js"></script>
+    <script defer src="../../public/js/script.js"></script>
 
     <script></script>
 
@@ -29,48 +30,85 @@
 <body>
     <header>
         <a class="navbar-brand" href="#">ProjetoX</a>
+        <div class="theme-switch">
+            <input type="checkbox" id="theme-checkbox" />
+            <label for="theme-checkbox">
+              <div></div>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+              </span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="w-6 h-6"
+                >
+                  <path
+                    d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"
+                  ></path>
+                </svg>
+              </span>
+            </label>
+          </div>
     </header>
     <main>
-        <div class="pred_form">
-            <label for="pred_form" class="title">Create a Pré-definition</label>
-            <div class="pred_name">
-
-            </div>
-            <div class="tools_box">
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item1" name="item1">
-                    <label for="item1" class="check_box"></label>
-                    <label for="item1" class="checkbox_label">Tool 1</label>
+        <div class="main_container">
+            <div class="pred_form">
+                <label for="pred_form" class="title">Create a Pré-definition</label>
+                <div class="pred_name">
+                    <input type="text" class="input_text" placeholder="Name">
                 </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item2" name="item2">
-                    <label for="item2" class="check_box"></label>
-                    <label for="item2" class="checkbox_label">Tool 2</label>
+                <div class="tools_box">
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item1" name="item1">
+                        <label for="item1" class="check_box"></label>
+                        <label for="item1" class="checkbox_label">Tool 1</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item2" name="item2">
+                        <label for="item2" class="check_box"></label>
+                        <label for="item2" class="checkbox_label">Tool 2</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item3" name="item3">
+                        <label for="item3" class="check_box"></label>
+                        <label for="item3" class="checkbox_label">Tool 3</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item4" name="item4">
+                        <label for="item4" class="check_box"></label>
+                        <label for="item4" class="checkbox_label">Tool 4</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item5" name="item5">
+                        <label for="item5" class="check_box"></label>
+                        <label for="item5" class="checkbox_label">Tool 5</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item6" name="item6">
+                        <label for="item6" class="check_box"></label>
+                        <label for="item6" class="checkbox_label">Tool 6</label>
+                    </div>
+                    <div class="option_checkbox">
+                        <input type="checkbox" id="item7" name="item7">
+                        <label for="item7" class="check_box"></label>
+                        <label for="item7" class="checkbox_label">Tool 7</label>
+                    </div>
                 </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item3" name="item3">
-                    <label for="item3" class="check_box"></label>
-                    <label for="item3" class="checkbox_label">Tool 3</label>
-                </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item4" name="item4">
-                    <label for="item4" class="check_box"></label>
-                    <label for="item4" class="checkbox_label">Tool 4</label>
-                </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item5" name="item5">
-                    <label for="item5" class="check_box"></label>
-                    <label for="item5" class="checkbox_label">Tool 5</label>
-                </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item6" name="item6">
-                    <label for="item6" class="check_box"></label>
-                    <label for="item6" class="checkbox_label">Tool 6</label>
-                </div>
-                <div class="option_checkbox">
-                    <input type="checkbox" id="item7" name="item7">
-                    <label for="item7" class="check_box"></label>
-                    <label for="item7" class="checkbox_label">Tool 7</label>
+                <div>
+                    <button type="button" class="btn">Create</button>
                 </div>
             </div>
         </div>
