details fixed pred screen

--- a/public/css/pred_creator_css/pred_creator_header.css
+++ b/public/css/pred_creator_css/pred_creator_header.css
@@ -31,3 +31,7 @@ a.navbar-brand{
     color: var(--input_color);
     font-size: 30px;
 }
+
+a.navbar-brand:hover{
+    color: var(--main_color);
+}
