--- a/src/views/new_page.html
+++ b/src/views/new_page.html
@@ -77,15 +77,22 @@
                     <h2 class="buddy">Page!</h2>
                 </div>
 
-                
                 <input type="text" class="input_text" placeholder="Name">
-                
-
+            
                 <textarea name="" id=""  class="input_text_area" placeholder="Description"></textarea>
 
-                
-
-                <button type="button" class="btn"><b>Create</b></button>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                       Chose your predefinition
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Predefinition 1</a></li>
+                      <li><a class="dropdown-item" href="#">Predefinition 2</a></li>
+                      <li><a class="dropdown-item" href="#">Predefinition 3</a></li>
+                    </ul>
+                  </div>
+                  
+                <button type="button" class="btn_create"><b>Create</b></button>
             </div>
 
 
