Dark-light mode function added to page screen

--- a/public/css/details_css/option_bar.css
+++ b/public/css/details_css/option_bar.css
@@ -1,18 +1,30 @@
+:root{
+  --bg_color: #f6f7fa;
+  --input_color: #12141b;
+  --main_color: #6C3287;
+  --grey_border: #131212;
+  --input_bg_color: #f6f7fa;
+}
+
+/* Cores para o modo escuro */
+.dark-mode {
+  --bg_color: #02040F;
+  --input_color: #FAFAFA;
+  --main_color: #6C3287;
+  --grey_border: #12141B;
+  --input_bg_color: #12141B;
+}
+
 .wrapper {
-    --font-color-dark: #b4b4b4;
-    --font-color-light: #FAFAFA;
-    --bg-color: #212121;
-    --main-color: #6C3287;
-    --secondary-color: #141414;
     position: relative;
     width: 300px;
     height: 36px;
-    background-color: var(--bg-color);
-    border: 2px solid var(--main-color);
+    background-color: var(--bg_color);
+    border: 2px solid var(--main_color);
     border-radius: 34px;
     display: flex;
     flex-direction: row;
-    box-shadow: 4px 4px var(--main-color);
+    box-shadow: 4px 4px var(--main_color);
   }
   
   .option {
@@ -35,7 +47,7 @@
   }
   
   .option:hover .span {
-    color: var(--font-color-light);
+    color: var(--input_color);
   }
   
   .input {
@@ -58,16 +70,16 @@
   }
   
   .span {
-    color: var(--font-color-dark);
+    color: var(--input_color);
   }
   
   .input:checked + .btn {
-    background-color: var(--main-color);
+    background-color: var(--main_color);
     transition: 0.2s cubic-bezier(0, 0, 0, 1);
   }
   
   .input:checked + .btn .span {
-    color: var(--font-color-light);
+    color: #fafafa;
     transition: 0.25s cubic-bezier(0, 0, 0, 1);
   }
   
