--- a/public/css/page_css/page_header.css
+++ b/public/css/page_css/page_header.css
@@ -1,3 +1,20 @@
+:root{
+    --bg_color: #f6f7fa;
+    --input_color: #12141b;
+    --main_color: #6C3287;
+    --grey_border: #131212;
+    --input_bg_color: #f6f7fa;
+}
+
+/* Cores para o modo escuro */
+.dark-mode {
+    --bg_color: #02040F;
+    --input_color: #FAFAFA;
+    --main_color: #6C3287;
+    --grey_border: #12141B;
+    --input_bg_color: #12141B;
+}
+
 *{
     font-family: 'Barlow', sans-serif;  
 }
@@ -10,6 +27,10 @@ header {
 }
 
 a.navbar-brand{
-    color: white;
+    color: var(--input_color);
     font-size: 30px;
+}
+
+a.navbar-brand:hover{
+    color: var(--main_color);
 }
