Efetuando ultimas alterações no front

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,9 +18,8 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/sign_in/index_header.css">
-    <link rel="stylesheet" href="css/sign_in/index_main.css">
-    <link rel="stylesheet" href="css/sign_in/index_footer.css">
+  <link rel="stylesheet" href="css/sign_in_css/index_header.css">
+    <link rel="stylesheet" href="css/sign_in_css/index_main.css">
     <link rel="stylesheet" href="css/details_css/day_night.css">
 
     <script defer src="js/script.js"></script>
@@ -110,6 +109,7 @@
                         <input type="text" class="input_text" placeholder="Confirm Password">
                     </div>
                     <button type="button" class="btn"><b>Create</b></button>
+                    <p>Already have an account ? <a href="">click here</a></p> 
 
             </div>
 
