--- a/src/views/login.html
+++ b/src/views/login.html
@@ -104,7 +104,7 @@
                     </div>
                     
                     <button type="button" class="btn"><b>Login</b></button>   
-                    <p>Dont had an account ? <a href="">click here</a></p>                
+                    <p>Dont have an account ? <a href="">click here</a></p>                
             </div>
             
 
