Dark-light mode added to the pages list screen

--- a/public/css/details_css/page_card.css
+++ b/public/css/details_css/page_card.css
@@ -9,8 +9,7 @@
     padding: 32px;
     overflow: hidden;
     border-radius: 10px;
-    background: #12141b;
-    border: 2px solid #12141b;
+    background: var(--input_bg_color);
     transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
@@ -19,7 +18,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    color: #e8e8e8;
+    color: var(--input_color);
     transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
