Desenvolvendo a ferramenta de login

--- a/public/css/sign_in_css/index_main.css
+++ b/public/css/sign_in_css/index_main.css
@@ -83,3 +83,12 @@
 .title_text{
     font-size: 30px;
 }
+
+.form_setup{
+    display: flex;
+    flex-direction: column;    
+    gap: 50px;
+    margin-bottom: 15px;
+    width: 100%;
+    align-items: center;
+}
