--- a/src/views/page_select.ejs
+++ b/src/views/page_select.ejs
@@ -13,16 +13,16 @@
         crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../public/css/page_select_css/page_select_header.css">
-    <link rel="stylesheet" href="../../public/css/page_select_css/page_select_main.css">
-    <link rel="stylesheet" href="../../public/css/page_select_css/page_select_footer.css">
+    <link rel="stylesheet" href="css/page_select_css/page_select_header.css">
+    <link rel="stylesheet" href="css/page_select_css/page_select_main.css">
+    <link rel="stylesheet" href="css/page_select_css/page_select_footer.css">
 
-    <link rel="stylesheet" href="../../public/css/details_css/option_bar.css">
-    <link rel="stylesheet" href="../../public/css/details_css/page_card.css">
+    <link rel="stylesheet" href="css/details_css/option_bar.css">
+    <link rel="stylesheet" href="css/details_css/page_card.css">
 
-    <link rel="stylesheet" href="../../public/css/details_css/day_night.css">
+    <link rel="stylesheet" href="css/details_css/day_night.css">
 
-    <script defer src="../../public/js/script.js"></script>
+    <script defer src=js/script.js"></script>
 
     <script></script>
 
