Configurando as rotas, das paginas index, login, new_page e page select e fazendo ajustes no sistema de login

--- a/src/views/new_page.ejs
+++ b/src/views/new_page.ejs
@@ -18,11 +18,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../../public/css/new_page_css/new_page_header.css">
-    <link rel="stylesheet" href="../../public/css/new_page_css/new_page_main.css">
-    <link rel="stylesheet" href="../../public/css/details_css/day_night.css">
+    <link rel="stylesheet" href="css/new_page_css/new_page_header.css">
+    <link rel="stylesheet" href="css/new_page_css/new_page_main.css">
+    <link rel="stylesheet" href="css/details_css/day_night.css">
 
-    <script defer src="../../public/js/script.js"></script>
+    <script defer src="js/script.js"></script>
 
     <script></script>
 
