--- a/src/views/page_select.ejs
+++ b/src/views/page_select.ejs
@@ -173,7 +173,8 @@
             <div class="card_item">
                 <div class="card">
                     <div class="content">
-                        <span class="add_page"><b>✚</b></span>
+                        <a href="/new_page" class="add_page"><b>✚</b></a>
+                        
                     </div>
                 </div>
             </div>
