--- a/public/css/page_select_css/page_select_main.css
+++ b/public/css/page_select_css/page_select_main.css
@@ -15,6 +15,15 @@ body {
 
 .add_page {
     font-size: 50px;
+    border: none;
+    background-color: var(--bg_color);
+    text-decoration: none;
+    color: var(--input_color);
+
+}
+
+.add_page:hover{
+    color: var(--main_color);
 }
 
 .add_item {
