--- a/src/views/page_select.ejs
+++ b/src/views/page_select.ejs
@@ -101,7 +101,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                         laboriosam at voluptas minus culpa deserunt delectus sapiente
                         inventore pariatur
                       </p>
-                      <button class="btn">Visit</button>
+                      <a href="/page" class="btn">Visit</a>
                     </div>
                 </div>
             </div>
