--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -2,107 +2,112 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjetoX</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ProjetoX</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
 
-    <link rel="stylesheet" href="css/page_css/page_header.css">
-    <link rel="stylesheet" href="css/page_css/page_main.css">
-    <link rel="stylesheet" href="css/page_css/page_footer.css">
+  <link rel="stylesheet" href="css/page_css/page_header.css">
+  <link rel="stylesheet" href="css/page_css/page_main.css">
+  <link rel="stylesheet" href="css/page_css/page_footer.css">
 
-    <link rel="stylesheet" href="css/details_css/option_bar.css">
+  <link rel="stylesheet" href="css/details_css/option_bar.css">
 
-    <link rel="stylesheet" href="css/details_css/day_night.css">
+  <link rel="stylesheet" href="css/details_css/day_night.css">
 
-    <script defer src="js/script.js"></script>
+  <script defer src="js/script.js"></script>
+  <script  defer src="js/text.js"></script>
 
-    <script></script>
+  <script></script>
 
 </head>
 
 <body>
   <header>
-      <a class="navbar-brand" href="#">ProjetoX</a>
-      <div class="wrapper">
-        <div class="option">
-          <input checked="" value="option1" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag1</span>
-          </div>
-        </div>
-        <div class="option">
-          <input value="option2" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag2</span>
-          </div>
-        </div>
-        <div class="option">
-          <input value="option3" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag3</span>
-          </div>
-        </div>
-        <div class="option">
-            <input value="option4" name="btn" type="radio" class="input" />
-            <div class="btn">
-              <span class="span">. . .</span>
-            </div>
+    <a class="navbar-brand" href="#">ProjetoX</a>
+    <div class="wrapper">
+      <div class="option">
+        <input checked="" value="option1" name="btn" type="radio" class="input" />
+        <div class="btn">
+          <span class="span">Pag1</span>
         </div>
       </div>
-      <div class="theme-switch">
-        <input type="checkbox" id="theme-checkbox" />
-        <label for="theme-checkbox">
-          <div></div>
-          <span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-              class="w-6 h-6"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
-          </span>
-          <span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-              class="w-6 h-6"
-            >
-              <path
-                d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"
-              ></path>
-            </svg>
-          </span>
-        </label>
+      <div class="option">
+        <input value="option2" name="btn" type="radio" class="input" />
+        <div class="btn">
+          <span class="span">Pag2</span>
+        </div>
       </div>
+      <div class="option">
+        <input value="option3" name="btn" type="radio" class="input" />
+        <div class="btn">
+          <span class="span">Pag3</span>
+        </div>
+      </div>
+      <div class="option">
+        <input value="option4" name="btn" type="radio" class="input" />
+        <div class="btn">
+          <span class="span">. . .</span>
+        </div>
+      </div>
+    </div>
+    <div class="theme-switch">
+      <input type="checkbox" id="theme-checkbox" />
+      <label for="theme-checkbox">
+        <div></div>
+        <span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+            <path fill-rule="evenodd"
+              d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </span>
+        <span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+            <path
+              d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z">
+            </path>
+          </svg>
+        </span>
+      </label>
+    </div>
   </header>
   <main>
+    <article class="main_box">
       <div class="tools_bar">
-          <div class="tools_list">
-              <input value="Text" type="button" class="tool_option">
-              <input value="Draw" type="button" class="tool_option">
-              <input value="tool3" type="button" class="tool_option">
-              <input value="tool4" type="button" class="tool_option">
-              <input value="tool5" type="button" class="tool_option">
-          </div>
+        <div class="tools_list">
+          <input value="Text" type="button" class="tool_option">
+          <input value="Draw" type="button" class="tool_option">
+          <input value="tool3" type="button" class="tool_option">
+          <input value="tool4" type="button" class="tool_option">
+          <input value="tool5" type="button" class="tool_option">
+          <input type="color" id="textColorPicker">
+        </div>
 
-          <div class="home_space">
-              <input value="Home" type="button" class="home_button">
-          </div>
+        <div class="home_space">
+          <input value="Home" type="button" class="home_button">
+        </div>
       </div>
+
+      <div class="grid_content" contenteditable="true">
+        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
+        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
+        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
+
+      </div>
+
+    </article>
+
   </main>
   <footer>
 
