--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -11,24 +11,27 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="css/page_css/page_header.css">
-  <link rel="stylesheet" href="css/page_css/page_main.css">
-  <link rel="stylesheet" href="css/page_css/page_footer.css">
+  <link rel="stylesheet" href="/css/page_css/page_header.css">
+  <link rel="stylesheet" href="/css/page_css/page_main.css">
+  <link rel="stylesheet" href="/css/page_css/page_footer.css">
 
   <link rel="stylesheet" href="css/details_css/option_bar.css">
 
   <link rel="stylesheet" href="css/details_css/day_night.css">
 
   <script defer src="js/script.js"></script>
-  <script  defer src="js/text.js"></script>
+  <script defer src="js/text.js"></script>
 
-  <script></script>
+  <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js"></script>
+
+
 
 </head>
 
@@ -99,12 +102,13 @@
         </div>
       </div>
 
-      <div class="grid_content" contenteditable="true">
-        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
-        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
-        <textarea name="content" id="content" class="text_content" rows="1"></textarea>
 
+      <div  id="editor">
+        This is some example
       </div>
+
+
+
 
     </article>
 
@@ -112,6 +116,13 @@
   <footer>
 
   </footer>
+  <script>
+    ClassicEditor
+      .create(document.querySelector('#editor'))
+      .catch(error => {
+        console.error(error);
+      });
+  </script>
 
 </body>
 
