Adicionando a correção do tamanho do size

--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -81,6 +81,15 @@ article{
 
 .ck-editor__main{
     width: 100%;
+    height: 450px;
+    max-height: 800px;
+    
+}
+
+.ck-editor__editable[role="textbox"] {
+    /* Editing area */
+    min-height: 200px;
+    max-height: 150%;
 }
 
 
