Canvas tool almost done

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -88,9 +88,9 @@
           </div>
         </div>
 
-        <div class="grid_cell">
-          <div id="canvas_cell">
-            <canvas class="myCanvas" height="270"></canvas>
+        <!-- <div class="grid_cell">
+          <div class="canvas_cell">
+            <canvas class="myCanvas"></canvas>
             <div class="canva_settings">
               <button class="eraserBtn">Drawing</button>
               <input type="range" class="eraserSize" min="1" max="50" value="10">
@@ -100,7 +100,7 @@
               <label for="pencilSize">Pencil Size</label>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
