--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -83,7 +83,6 @@ article{
     width: 100%;
 }
 
-
 .canva_tool {
     border: 2px solid #6C3287;
     color: var(--input_color);
@@ -101,13 +100,13 @@ article{
     width: 100px;
 }
 
-#myCanvas {
+.myCanvas {
     background-color: #f6f7fa;
     border: 2px solid #6C3287;
     border-radius: 20px;
-    width: 100%; /* Make the canvas take up the entire width of the grid cell */
-    height: 100%; /* Make the canvas take up the entire height of the grid cell */
-    box-sizing: border-box; /* Include padding and border in the width and height */
+    width: 100%; 
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .grid_content {
@@ -126,6 +125,7 @@ article{
     color: var(--input_color);
     position: relative;
     box-sizing: border-box;
+    height: 750px;
 }
 
 /* Modal styles */
