Tools applied and fully working, name of the tool

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -69,24 +69,21 @@
         <div class="modal" id="myModal">
           <div class="modal-content">
               <span class="close">&times;</span>
+              <input class="name_input" id="nameInput" type="text" placeholder="Name of the tool: ">
               <p>Choose an option:</p>
               <button class="add_option" id="textOption">Text</button>
               <button class="add_option" id="drawOption">Drawing</button>
           </div>
         </div>
-
-        <div class="home_space">
-            <input value="Home" type="button" class="home_button">
-        </div>
       </div>
 
       <div class="grid_content">
 
-        <div class="grid_cell">
+        <!-- <div class="grid_cell">
           <div id="editor">
             This is some example
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="grid_cell">
           <div class="canvas_cell">
