--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -15,11 +15,15 @@ body {
     border-radius: 30px;
     box-shadow: 5px 5px #6C3287;
     position: relative;
+    overflow-y: auto;
 }
 
 .tools_list {
     margin-top: 50px;
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .tool_option {
