Corrigindo divergencias dos códigos

--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -88,6 +88,10 @@ article{
     width: 100%;
 }
 
+.ck-content{
+    max-height: 680px;
+}
+
 .canva_tool {
     border: 2px solid #6C3287;
     color: var(--input_color);
@@ -141,6 +145,7 @@ article{
     width: 45%;    
     min-height: 750px;
     min-width: 700px;
+    max-height: 750px;
 }
 
 /* Modal styles */
